--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ ipywidgets = "^8.1.2"
 networkx = "^3.3"
 matplotlib = "^3.8.4"
 scipy = "^1.13.0"
+pandas = "^2.2.2"
+seaborn = "^0.13.2"
 
 
 [build-system]
